nix/cardano-services/deployments/blockfrost-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: blockfrost-worker
    network: preview
    release: dev-preview-cardanojs
  name: dev-preview-cardanojs-blockfrost-worker
spec:
  selector:
    matchLabels:
      app: blockfrost-worker
      network: preview
      release: dev-preview-cardanojs
  template:
    metadata:
      labels:
        app: blockfrost-worker
        network: preview
        release: dev-preview-cardanojs
    spec:
      containers:
      - args:
        - start-blockfrost-worker
        image: 926093910549.dkr.ecr.us-east-1.amazonaws.com/cardano-services:hkysmjx503aiijb33cw929p6zmbvlp8d
        livenessProbe:
          httpGet:
            path: /v1.0.0/health
            port: 3000
          timeoutSeconds: 5
        name: blockfrost-worker
        ports:
        - containerPort: 3000
          name: http
        resources:
          limits:
            cpu: 500m
            memory: 300Mi
          requests:
            cpu: 100m
            memory: 150Mi
        securityContext:
          runAsGroup: 0
          runAsUser: 0
        volumeMounts:
        - mountPath: /tls
          name: tls
      imagePullSecrets:
      - name: dockerconfigjson
      volumes:
        - name: tls
          secret:
            secretName: postgresql-server-cert
