nix/cardano-services/deployments/coingecko-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: coingecko-proxy
    network: preview
    release: dev-preview-cardanojs
  name: dev-preview-cardanojs-coingecko-proxy
spec:
  selector:
    matchLabels:
      app: coingecko-proxy
      network: preview
      release: dev-preview-cardanojs
  template:
    metadata:
      labels:
        app: coingecko-proxy
        network: preview
        release: dev-preview-cardanojs
    spec:
      containers:
        - image: 926093910549.dkr.ecr.us-east-1.amazonaws.com/coingecko-proxy:qzydqc9866j6hchxkra7v9a70l19g35x
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            timeoutSeconds: 5
          name: coingecko-proxy
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
          startupProbe:
            failureThreshold: 50
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 1
      imagePullSecrets:
        - name: dockerconfigjson
