nix/cardano-services/deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
    network: preview
    release: dev-preview-cardanojs
  name: dev-preview-cardanojs-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      network: preview
      release: dev-preview-cardanojs
  template:
    metadata:
      labels:
        app: backend
        network: preview
        release: dev-preview-cardanojs
    spec:
      containers:
        - env:
            - name: ALLOWED_ORIGINS
              value: chrome-extension://gafhhkghbfjjkeiendhlofajokpaflmk
            - name: DISABLE_STAKE_POOL_METRIC_APY
              value: "true"
            - name: LOGGER_MIN_SEVERITY
              value: debug
            - name: NETWORK
              value: preview
            - name: OGMIOS_SRV_SERVICE_NAME
              value: dev-preview-cardano-stack.dev-preview.svc.cluster.local
            - name: PAGINATION_PAGE_SIZE_LIMIT
              value: "5500"
            - name: POSTGRES_DB_DB_SYNC
              value: cardano
            - name: POSTGRES_HOST_DB_SYNC
              value: dev-preview-dbsync-db
            - name: POSTGRES_PASSWORD_DB_SYNC
              valueFrom:
                secretKeyRef:
                  key: password
                  name: cardano-owner-user.dev-preview-dbsync-db.credentials.postgresql.acid.zalan.do
            - name: POSTGRES_POOL_MAX_DB_SYNC
              value: "50"
            - name: POSTGRES_PORT_DB_SYNC
              value: "5432"
            - name: POSTGRES_SSL_CA_FILE_DB_SYNC
              value: /tls/ca.crt
            - name: POSTGRES_SSL_DB_SYNC
              value: "true"
            - name: POSTGRES_USER_DB_SYNC
              valueFrom:
                secretKeyRef:
                  key: username
                  name: cardano-owner-user.dev-preview-dbsync-db.credentials.postgresql.acid.zalan.do
            - name: TOKEN_METADATA_SERVER_URL
              value: http://dev-preview-cardano-stack-metadata.dev-preview.svc.cluster.local
            - name: USE_BLOCKFROST
              value: "false"
          image: ghcr.io/input-output-hk/cardano-js-sdk:latest
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            timeoutSeconds: 5
          name: backend
          ports:
            - containerPort: 3000
              name: http
          resources:
            limits:
              memory: 4Gi
          securityContext:
            runAsGroup: 0
            runAsUser: 0
          volumeMounts:
            - mountPath: /tls
              name: tls
      imagePullSecrets:
        - name: dockerconfigjson
      volumes:
        - csi:
            driver: csi.cert-manager.io
            readOnly: true
            volumeAttributes:
              csi.cert-manager.io/issuer-kind: ClusterIssuer
              csi.cert-manager.io/issuer-name: root-ca
              csi.cert-manager.io/key-usages: client auth
          name: tls
