nix/cardano-services/deployments/pgboss-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pg-boss-worker
    network: preview
    release: dev-preview-cardanojs
  name: dev-preview-cardanojs-pg-boss-worker
spec:
  selector:
    matchLabels:
      app: pg-boss-worker
      network: preview
      release: dev-preview-cardanojs
  template:
    metadata:
      labels:
        app: pg-boss-worker
        network: preview
        release: dev-preview-cardanojs
    spec:
      containers:
        - args:
            - start-pg-boss-worker
          image: FIXME-ADD-LATEST-IMAGE-REFERENCE
          livenessProbe:
            httpGet:
              path: /v1.0.0/live
              port: 3000
          name: pg-boss-worker
          ports:
            - containerPort: 3000
              name: http
          resources:
            limits:
              cpu: 300m
              memory: 300Mi
            requests:
              cpu: 200m
              memory: 150Mi
          securityContext:
            runAsGroup: 0
            runAsUser: 0
          startupProbe:
            httpGet:
              path: /v1.0.0/ready
              port: 3000
            initialDelaySeconds: 80
            periodSeconds: 5
          volumeMounts:
            - mountPath: /tls
              name: tls
      imagePullSecrets:
        - name: dockerconfigjson
      volumes:
        - csi:
            driver: csi.cert-manager.io
            readOnly: true
            volumeAttributes:
              csi.cert-manager.io/issuer-kind: ClusterIssuer
              csi.cert-manager.io/issuer-name: root-ca
              csi.cert-manager.io/key-usages: client auth
          name: tls
