nix/cardano-services/deployments/stake-pool-projector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stake-pool-projector
    network: preview
    release: dev-preview-cardanojs
  name: dev-preview-cardanojs-stake-pool-projector
spec:
  selector:
    matchLabels:
      app: stake-pool-projector
      network: preview
      release: dev-preview-cardanojs
  template:
    metadata:
      labels:
        app: stake-pool-projector
        network: preview
        release: dev-preview-cardanojs
    spec:
      containers:
        - args:
            - start-projector
          image: FIXME-ADD-LATEST-IMAGE-REFERENCE
          livenessProbe:
            httpGet:
              path: /v1.0.0/health
              port: 3000
            timeoutSeconds: 5
          name: stake-pool-projector
          ports:
            - containerPort: 3000
              name: http
          resources:
            limits:
              cpu: 700m
              memory: 300Mi
            requests:
              cpu: 700m
              memory: 150Mi
          securityContext:
            runAsGroup: 0
            runAsUser: 0
          volumeMounts:
            - mountPath: /tls
              name: tls
      imagePullSecrets:
        - name: dockerconfigjson
      volumes:
        - csi:
            driver: csi.cert-manager.io
            readOnly: true
            volumeAttributes:
              csi.cert-manager.io/issuer-kind: ClusterIssuer
              csi.cert-manager.io/issuer-name: root-ca
              csi.cert-manager.io/key-usages: client auth
          name: tls
