nix/cardano-services/deployments/stake-pool-provider-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stake-pool-provider
    network: preview
    release: dev-preview-cardanojs
  name: dev-preview-cardanojs-stake-pool-provider
spec:
  selector:
    matchLabels:
      app: stake-pool-provider
      network: preview
      release: dev-preview-cardanojs
  template:
    metadata:
      labels:
        app: stake-pool-provider
        network: preview
        release: dev-preview-cardanojs
    spec:
      containers:
        - args:
            - start-provider-server
          image: 926093910549.dkr.ecr.us-east-1.amazonaws.com/cardano-services-server:aana7a352vdaz0rs41yhfh3s85inw004
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            timeoutSeconds: 5
          name: stake-pool-provider
          ports:
            - containerPort: 3000
              name: http
          resources:
            limits:
              cpu: 500m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 150Mi
          securityContext:
            runAsGroup: 0
            runAsUser: 0
          volumeMounts:
            - mountPath: /tls
              name: tls
      imagePullSecrets:
        - name: dockerconfigjson
      volumes:
        - csi:
            driver: csi.cert-manager.io
            readOnly: true
            volumeAttributes:
              csi.cert-manager.io/issuer-kind: ClusterIssuer
              csi.cert-manager.io/issuer-name: root-ca
              csi.cert-manager.io/key-usages: client auth
          name: tls
