nix/cardano-services/deployments/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend

  name: cardanojs-backend
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: backend
