nix/cardano-services/deployments/coingecko-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: coingecko-proxy

  name: cardanojs-coingecko-proxy
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: coingecko-proxy
