nix/cardano-services/deployments/handle-provider-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: handle-provider
    network: preview
    release: dev-preview-cardanojs
  name: dev-preview-cardanojs-handle-provider
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: handle-provider
    network: preview
    release: dev-preview-cardanojs
