nix/cardano-services/deployments/stake-pool-provider-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stake-pool-provider
    network: preview
    release: dev-preview-cardanojs
  name: dev-preview-cardanojs-stake-pool-provider
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: stake-pool-provider
    network: preview
    release: dev-preview-cardanojs
